Refactor property creation logic
